--- a/index.html
+++ b/index.html
@@ -102,24 +102,52 @@
           <div class="container-fluid col-xl-9 bg-secondary">
           <div class="nuevo-div">
               <table class="table table-dark table-striped">
-                <div class="row gap-5">
-                  <div class="col col1">
+                <div class="row">
+                  <div class="col  col2">
                     One of three columns
                   </div>
-                  <div class="col col1">
+                  <div class="col  col2">
                     One of three columns
                   </div>
-                  <div class="col col1">
+                  <div class="col  col2">
                     One of three columns
                   </div>
-                  <div class="col col1">
+                  <div class="col  col2">
                     One of three columns
                   </div>
-                  <div class="col col1">
+                  <div class="col col2">
                     One of three columns
                   </div>
-                  <div class="col">
-
+                </div>
+                <hr/>
+                <h3>Today's Highlights</h3>
+                <div class="row">
+                  <div class="col col1">
+                    <div class="text-center">Wind status</div>
+                    <div class="text-center">
+                      <span id="wind"></span><span> mph</span>
+                    </div>
+                  </div>
+                  <div class="col col1 ">
+                    <div class="text-center">Humidity</div>
+                    <div class="text-center">
+                      <span id="humidity"></span><span> %</span>
+                    </div>
+                  </div>
+                </div>
+                <hr/>
+                <div class="row">
+                  <div class="col col1">
+                    <div class="text-center">Visibility</div>
+                    <div class="text-center">
+                      <span id="visibility"></span><span> miles</span>
+                    </div>
+                  </div>
+                  <div class="col col1">
+                    <div class="text-center">Air Pressure</div>
+                    <div class="text-center">
+                      <span id="wind"></span><span> mb</span>
+                    </div>
                   </div>
                 </div>
                       <!--<tr class="row">
