Se agrega llamada a Api para obtener datos de lso siguietnes 5 dias y mostrar la imagen actualizada

--- a/index.html
+++ b/index.html
@@ -8,6 +8,9 @@
     <link rel="stylesheet" href="./style.css" />
     <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@100;500;600&display=swap" rel="stylesheet">
     
+    <!--MomentJs-->
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.29.4/moment.js" integrity="sha512-CTSrPIDxxtTdaIYlTKHEyvHa+70TOhC1pY3PLDgrUqCFifFtV7KrucZCvPy2K7hB0HtKgt0r4INTGBISqnaLNg==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
+
     <!--Axios-->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/axios/1.1.3/axios.min.js" 
       integrity="sha512-0qU9M9jfqPw6FKkPafM3gy2CBAvUWnYVOfNPDYKVuRTel1PrciTj+a9P3loJB+j0QmN2Y0JYQmkBBS8W+mbezg==" 
@@ -103,22 +106,108 @@
           <div class="nuevo-div">
               <table class="table table-dark table-striped">
                 <div class="row">
-                  <div class="col  col2">
-                    One of three columns
+
+                  <div class="col col2"> <!--Card-->
+                    <div class="text-center">
+                      <span id="weekDayPlus1"></span>
+                      <span id="numDayPlus1"></span>
+                      <span id="monthPlus1"></span>
+                    </div>
+                    <div class="text-center">
+                      <span id="icondayplus1"></span>
+                    </div>
+                    <div>
+                      <span id="tempMin1"></span><span>°C</span>
+                      <span id="tempMax1"></span><span>°C</span>
+                    </div>
                   </div>
-                  <div class="col  col2">
-                    One of three columns
+
+                  <div class="col col2"> <!--Card-->
+                    <div class="text-center">
+                      <span id="weekDayPlus2"></span>
+                      <span id="numDayPlus2"></span>
+                      <span id="monthPlus2"></span>
+                    </div>
+                    <div class="text-center">
+                      <span id="icondayplus2"></span>
+                    </div>
+                    <div>
+                      <span id="tempMin2"></span><span>°C</span>
+                      <span id="tempMax2"></span><span>°C</span>
+                    </div>
                   </div>
-                  <div class="col  col2">
-                    One of three columns
+
+
+                  <div class="col col2"> <!--Card-->
+                    <div class="text-center">
+                      <span id="weekDayPlus3"></span>
+                      <span id="numDayPlus3"></span>
+                      <span id="monthPlus3"></span>
+                    </div>
+                    <div class="text-center">
+                      <span id="icondayplus3"></span>
+                    </div>
+                    <div>
+                      <span id="tempMin3"></span><span>°C</span>
+                      <span id="tempMax3"></span><span>°C</span>
+                    </div>
                   </div>
-                  <div class="col  col2">
-                    One of three columns
+
+
+                  <div class="col col2"> <!--Card-->
+                    <div class="text-center">
+                      <span id="weekDayPlus4"></span>
+                      <span id="numDayPlus4"></span>
+                      <span id="monthPlus4"></span>
+                    </div>
+                    <div class="text-center">
+                      <span id="icondayplus4"></span>
+                    </div>
+                    <div>
+                      <span id="tempMin4"></span><span>°C</span>
+                      <span id="tempMax4"></span><span>°C</span>
+                    </div>
+                  </div>
+
+
+                  <div class="col col2"> <!--Card-->
+                    <div class="text-center">
+                      <span id="weekDayPlus5"></span>
+                      <span id="numDayPlus5"></span>
+                      <span id="monthPlus5"></span>
+                    </div>
+                    <div class="text-center">
+                      <span id="icondayplus5"></span>
+                    </div>
+                    <div>
+                      <span id="tempMin5"></span><span>°C</span>
+                      <span id="tempMax5"></span><span>°C</span>
+                    </div>
+                  </div>
+
+
+                  <!-- <div class="col col2">
+                    <div class="text-center">
+                      <span id="dayplus2"></span><span> </span>
+                    </div>
                   </div>
                   <div class="col col2">
-                    One of three columns
+                    <div class="text-center">
+                      <span id="dayplus3"></span><span> </span>
+                    </div>
                   </div>
+                  <div class="col col2">
+                    <div class="text-center">
+                      <span id="dayplus4"></span><span> </span>
+                    </div>
+                  </div>
+                  <div class="col col2">
+                    <div class="text-center">
+                      <span id="dayplus5"></span><span></span>
+                    </div>
+                  </div> -->
                 </div>
+
                 <hr/>
                 <h3>Today's Highlights</h3>
                 <div class="row">
