Estilo tarjeta alineacion

--- a/index.html
+++ b/index.html
@@ -108,7 +108,7 @@
                 <div class="row">
 
                   <div class="col col2"> <!--Card-->
-                    <div class="text-center">
+                    <div class="text-center mb-3">
                       <span id="weekDayPlus1"></span>
                       <span id="numDayPlus1"></span>
                       <span id="monthPlus1"></span>
@@ -116,14 +116,14 @@
                     <div class="text-center">
                       <span id="icondayplus1"></span>
                     </div>
-                    <div>
+                    <div class="text-center mt-5">
                       <span id="tempMin1"></span><span>°C</span>
                       <span id="tempMax1"></span><span>°C</span>
                     </div>
                   </div>
 
                   <div class="col col2"> <!--Card-->
-                    <div class="text-center">
+                    <div class="text-center  mb-3">
                       <span id="weekDayPlus2"></span>
                       <span id="numDayPlus2"></span>
                       <span id="monthPlus2"></span>
@@ -131,7 +131,7 @@
                     <div class="text-center">
                       <span id="icondayplus2"></span>
                     </div>
-                    <div>
+                    <div class="text-center mt-5">
                       <span id="tempMin2"></span><span>°C</span>
                       <span id="tempMax2"></span><span>°C</span>
                     </div>
@@ -139,7 +139,7 @@
 
 
                   <div class="col col2"> <!--Card-->
-                    <div class="text-center">
+                    <div class="text-center  mb-3">
                       <span id="weekDayPlus3"></span>
                       <span id="numDayPlus3"></span>
                       <span id="monthPlus3"></span>
@@ -147,7 +147,7 @@
                     <div class="text-center">
                       <span id="icondayplus3"></span>
                     </div>
-                    <div>
+                    <div class="text-center mt-5">
                       <span id="tempMin3"></span><span>°C</span>
                       <span id="tempMax3"></span><span>°C</span>
                     </div>
@@ -155,7 +155,7 @@
 
 
                   <div class="col col2"> <!--Card-->
-                    <div class="text-center">
+                    <div class="text-center  mb-3">
                       <span id="weekDayPlus4"></span>
                       <span id="numDayPlus4"></span>
                       <span id="monthPlus4"></span>
@@ -163,7 +163,7 @@
                     <div class="text-center">
                       <span id="icondayplus4"></span>
                     </div>
-                    <div>
+                    <div class="text-center mt-5">
                       <span id="tempMin4"></span><span>°C</span>
                       <span id="tempMax4"></span><span>°C</span>
                     </div>
@@ -171,7 +171,7 @@
 
 
                   <div class="col col2"> <!--Card-->
-                    <div class="text-center">
+                    <div class="text-center  mb-3">
                       <span id="weekDayPlus5"></span>
                       <span id="numDayPlus5"></span>
                       <span id="monthPlus5"></span>
@@ -179,7 +179,7 @@
                     <div class="text-center">
                       <span id="icondayplus5"></span>
                     </div>
-                    <div>
+                    <div class="text-center mt-5">
                       <span id="tempMin5"></span><span>°C</span>
                       <span id="tempMax5"></span><span>°C</span>
                     </div>
