--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
             </div>
 
             <div>
-              imagen de la nueve
+              <img src="./Snow.png" />
             </div>
 
             <div class="float-left">
@@ -185,27 +185,6 @@
                     </div>
                   </div>
 
-
-                  <!-- <div class="col col2">
-                    <div class="text-center">
-                      <span id="dayplus2"></span><span> </span>
-                    </div>
-                  </div>
-                  <div class="col col2">
-                    <div class="text-center">
-                      <span id="dayplus3"></span><span> </span>
-                    </div>
-                  </div>
-                  <div class="col col2">
-                    <div class="text-center">
-                      <span id="dayplus4"></span><span> </span>
-                    </div>
-                  </div>
-                  <div class="col col2">
-                    <div class="text-center">
-                      <span id="dayplus5"></span><span></span>
-                    </div>
-                  </div> -->
                 </div>
 
                 <hr/>
@@ -221,6 +200,9 @@
                     <div class="text-center">Humidity</div>
                     <div class="text-center">
                       <span id="humidity"></span><span> %</span>
+                      <div class="progress mt-4">
+                        <div id="humiditybar" class="progress-bar bg-warning" role="progressbar" style="width: 95%;" aria-valuenow="95" aria-valuemin="0" aria-valuemax="100"></div>
+                      </div>
                     </div>
                   </div>
                 </div>
@@ -235,7 +217,7 @@
                   <div class="col col1">
                     <div class="text-center">Air Pressure</div>
                     <div class="text-center">
-                      <span id="wind"></span><span> mb</span>
+                      <span id="pressure"></span><span> mb</span>
                     </div>
                   </div>
                 </div>
