Logo grande se actualiza

--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
             </div>
 
             <div>
-              <img src="./Snow.png" />
+              <img id="bigLogo" src="./Snow.png" alt="templogo"/>
             </div>
 
             <div class="float-left">
